--- a/symfony/app/templates/base.html.twig
+++ b/symfony/app/templates/base.html.twig
@@ -39,7 +39,7 @@
                 <div class="linkList">
                     <ul>
                         <li><a href="https://github.com/dbwebb-se/mvc">Länk till kursens Kursrepo</a></li>
-                        <li><a href="">Länk till mitt github</a></li>
+                        <li><a href="https://github.com/EmilHacklin/MCV-v2">Länk till mitt github</a></li>
                     </ul>
                 </div>
             </footer>
