--- a/symfony/app/templates/about.html.twig
+++ b/symfony/app/templates/about.html.twig
@@ -15,7 +15,7 @@
             <h2>Länkar</h2>
             <ul>
                 <li><a href="https://github.com/dbwebb-se/mvc">Länk till kursens Kursrepo</a></li>
-                <li><a href="">Länk till mitt github</a></li>
+                <li><a href="https://github.com/EmilHacklin/MCV-v2">Länk till mitt github</a></li>
             </ul>
         </div>
     </div>
