--- a/templates/lucky.html.twig
+++ b/templates/lucky.html.twig
@@ -3,11 +3,13 @@
 {% block title %}MVC: Lucky{% endblock %}
 
 {% block body %}
-    <div class="content">
-        <div class="column">
-            <h1>Magic number</h1>
-            <p style="text-align: center">Welcome to my awesome magical homepage.</p>
-            <p style="text-align: center">This is the current magic number: {{ number }}</p>
-        </div>
-    </div>
+<div class="column">
+    <h1>Magic number</h1>
+    <p style="text-align: center">
+        Welcome to my awesome magical homepage.
+    </p>
+    <p style="text-align: center">
+        This is the current magic number: {{ number }}
+    </p>
+</div>
 {% endblock %}
