--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,11 +27,14 @@
                             <li><a href="{{ path('report') }}">Report</a></li>
                             <li><a href="{{ path('lucky') }}">Lucky</a></li>
                             <li><a href="{{ path('api') }}">Api</a></li>
+                            <li><a href="{{ path('card_start') }}">Card</a></li>
                         </ul>
                     </nav>
                 </div>
             </div>
-            {% block body %}{% endblock %}
+            <div class="content">
+                {% block body %}{% endblock %}
+            </div>
             <footer>
                 <div class="img-logo">
                     <img src="{{ asset('img/logo.png') }}" alt="Logo image">
