--- a/templates/card/base.html.twig
+++ b/templates/card/base.html.twig
@@ -6,7 +6,7 @@
     {% endblock %}
 </div>
 <div class="column" style="width: 30%">
-    <h2>Länkar</h2>
+    <h2>Links</h2>
     <ul>
         <li><a href="{{ path('card_start') }}">Card Start Page</a></li>
         <li><a href="{{ path('card_session') }}">Session Information</a></li>
