--- a/templates/card/deck_draw.html.twig
+++ b/templates/card/deck_draw.html.twig
@@ -5,7 +5,7 @@
 {% block main %}
 <h1>Here we draw cards from the deck</h1>
 
-<ul class="deck">
+<ul class="cardHand">
     {% for card in hand %}
         <li class="card">{{ card }}</li>
     {% endfor %}
