--- a/templates/card/home.html.twig
+++ b/templates/card/home.html.twig
@@ -17,6 +17,6 @@
     <li>DeckOfCards: Manages an entire 52 card deck</li>    
 </ul>
 <p>
-    For more information pleas consult the UML diagram.
+    For more information please consult the UML diagram.
 </p>
 {% endblock %}
