--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,40 +1,20 @@
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
 body {
   background-color: skyblue;
   margin: 0;
   padding: 0;
-  height: 100%;
-}
-body h1 {
-  font-family: 'Times New Roman', Times, serif;
-  text-align: center;
-  clear: both;
-}
-body h2 {
-  font-family: 'Times New Roman', Times, serif;
-  text-align: center;
-  clear: both;
-}
-body p {
-  font-family: 'Courier New', Courier, monospace;
-}
-body table {
-  text-align: center;
-}
-body table th {
-  padding: 0.5em;
-}
-body table td {
-  padding: 0.5em;
-}
-body .center-box {
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 body .wrapper {
   display: flex;
-  flex-flow: column;
+  /* displays flex-items (children) inline */
+  flex-direction: column;
+  /* stacks them vertically */
   height: 100%;
+  /* needs to take the parents height, alternative: body {display: flex} */
 }
 body .wrapper .site-head {
   flex: 0 1 auto;
@@ -48,6 +28,8 @@ body .wrapper .site-head .site-header .site-title {
   color: #ffffff;
   font-size: 7.5em;
   text-align: center;
+  display: flex;
+  justify-content: center;
 }
 body .wrapper .site-head .site-menu {
   display: flex;
@@ -55,6 +37,7 @@ body .wrapper .site-head .site-menu {
   background-color: #4b4b4b;
 }
 body .wrapper .site-head .site-menu ul {
+  flex-direction: row;
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -77,53 +60,27 @@ body .wrapper .site-head .site-menu li a {
   padding: 2em;
 }
 body .wrapper .content {
-  flex: 1 1 auto;
-  margin-left: 5em;
-  margin-right: 5em;
-  background-color: rgba(255, 255, 255, 0.9);
-  display: flex;
-}
-body .wrapper .content .img-me {
-  float: right;
-  width: 20em;
-  border: 0.5em;
-  border-color: black;
-}
-body .wrapper .content .img-course {
-  float: left;
-  width: 20em;
-  border: 0.5em;
-  border-color: black;
-}
-body .wrapper .content .img-uml {
-  float: right;
-  width: 40em;
-  border: 0.5em;
-  border-color: black;
-}
-body .wrapper .content input {
-  font-size: 1em;
-}
-body .wrapper .content .die {
-  font-size: 2em;
-}
-body .wrapper .content .deck {
-  list-style: none;
-  margin: 0;
-  padding: 0em, 1em, 0em , 0em;
-}
-body .wrapper .content .card {
-  font-size: 5em;
-  float: left;
-}
-body .wrapper .content .column {
   border-left: 0.5em;
   border-right: 0.5em;
   border-top: 0;
   border-bottom: 0;
   border-style: groove;
   border-color: black;
-  padding: 5em;
+  margin-left: 5em;
+  margin-right: 5em;
+  background-color: rgba(255, 255, 255, 0.9);
+  display: flex;
+  flex-direction: row;
+  flex: 1;
+  /* takes the remaining height of the "wrapper" div */
+  overflow: auto;
+  /* to scroll just the "main" div */
+}
+body .wrapper .content .column {
+  padding-left: 5em;
+  padding-right: 5em;
+  height: 100%;
+  /* takes the visible area of the "main" div */
   width: 100%;
 }
 body .wrapper .content .column .row {
@@ -131,11 +88,11 @@ body .wrapper .content .column .row {
 }
 body .wrapper footer {
   display: flex;
+  flex: 0 1 auto;
   width: 100%;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
   background-color: #4b4b4b;
-  padding-top: 2em;
-  padding-bottom: 2em;
-  flex: 0 1 15em;
 }
 body .wrapper footer .img-logo {
   flex: 40%;
@@ -144,22 +101,107 @@ body .wrapper footer .img-logo img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 10em;
+  width: 8em;
 }
 body .wrapper footer .linkList {
   flex: 60%;
-  text-align: center;
 }
 body .wrapper footer .linkList ul {
   list-style: none;
   padding: 0;
   border: 0.5em;
   border-color: black;
-  display: flex;
-  justify-content: center;
 }
 body .wrapper footer .linkList ul a {
   color: #ffffff;
+}
+h1 {
+  font-family: 'Times New Roman', Times, serif;
+  text-align: center;
+  clear: both;
+}
+h2 {
+  font-family: 'Times New Roman', Times, serif;
+  text-align: center;
+  clear: both;
+}
+p {
+  font-family: 'Courier New', Courier, monospace;
+  text-align: center;
+}
+table {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+}
+table th {
+  padding: 0.5em;
+}
+table td {
+  padding: 0.5em;
+}
+ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+pre {
+  background: #f4f4f4;
+  border: 1px solid #ddd;
+  border-left: 3px solid #f36d33;
+  color: #666;
+  page-break-inside: avoid;
+  font-family: monospace;
+  font-size: 15px;
+  line-height: 1.6;
+  margin-bottom: 1.6em;
+  max-width: 100%;
+  overflow: auto;
+  padding: 1em 1.5em;
+  display: block;
+  word-wrap: break-word;
+}
+.img-me {
+  float: right;
+  width: 20em;
+  border: 0.5em;
+  border-color: black;
+}
+.img-course {
+  float: left;
+  width: 20em;
+  border: 0.5em;
+  border-color: black;
+}
+.img-uml {
+  float: right;
+  width: 30em;
+  border: 0.5em;
+  border-color: black;
+}
+.img-black-jack-flowchart {
+  width: 100%;
+  border: 0.5em;
+  border-color: black;
+}
+input {
+  font-size: 1em;
+}
+.die {
+  font-size: 2em;
+}
+.cardHand,
+.deck {
+  flex-direction: row;
+  flex-wrap: wrap;
+  list-style: none;
+  margin: 0;
+  padding: 0em, 1em, 0em , 0em;
+}
+.card {
+  font-size: 5em;
 }
 .flash-notice {
   padding: 0.5em;
