--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,6 +28,7 @@
                             <li><a href="{{ path('lucky') }}">Lucky</a></li>
                             <li><a href="{{ path('api') }}">Api</a></li>
                             <li><a href="{{ path('card_start') }}">Card</a></li>
+                            <li><a href="{{ path('game_start') }}">Game</a></li>
                         </ul>
                     </nav>
                 </div>
