--- a/templates/book/show.html.twig
+++ b/templates/book/show.html.twig
@@ -15,7 +15,7 @@
         </tr>
         {% for book in books %}
             <tr>
-                <td><img src="{{ asset(book['img']|default('/uploads/default.jpg'))}}" alt="Cover image of {{ book['title'] }}" class="img-book"></td>
+                <td><img src="{{ relative_path(book['img']|default('/uploads/default.jpg'))}}" alt="Cover image of {{ book['title'] }}" class="img-book"></td>
                 <td><a href="{{ path('book_show_one', {'id': book['id']}) }}">{{ book['title'] }}</a></td>
                 <td><a href="{{ path('book_show_one', {'id': book['id']}) }}">{{ book['isbn'] }}</a></td>
                 <td><a href="{{ path('book_show_one', {'id': book['id']}) }}">{{ book['author'] }}</a></td>
