Fix links in metric

--- a/templates/metrics.html.twig
+++ b/templates/metrics.html.twig
@@ -63,7 +63,7 @@
     <h2>PHPMetrics</h2>
 
     <p>
-        <a href="{{ asset('docs/old_metrics/index') }}">PHPMetrics repport</a>
+        <a href="{{ path('old_metrics') }}">PHPMetrics repport</a>
     </p>
     
     <p>
@@ -199,11 +199,11 @@
     <h3>PHPMetrics</h3>
 
     <p>
-        <a href="{{ asset('docs/old_metrics/index') }}">Old PHPMetrics repport</a>
+        <a href="{{ path('old_metrics') }}">Old PHPMetrics repport</a>
     </p>
 
     <p>
-        <a href="{{ asset('docs/new_metrics/index') }}">New PHPMetrics repport</a>
+        <a href="{{ path('new_metrics') }}">New PHPMetrics repport</a>
     </p>
 
     <h4>Analys</h4>
