--- a/templates/report.html.twig
+++ b/templates/report.html.twig
@@ -256,7 +256,7 @@
         </p>
 
         <p>
-            <q>Scrutinizer</q> verktyget var mycket svårare att få fungera då <q>scrutinizer.yml</q> filen vi fick i övningen försökte köra <pre><code>composer phpUnit</code></pre> kommandot i stället för att bara ladda <q>coverage.clover</q> filen. 
+            <q>Scrutinizer</q> verktyget var mycket svårare att få fungera då <q>scrutinizer.yml</q> filen vi fick i övningen försökte köra <q>composer phpUnit</q> kommandot i stället för att bara ladda <q>coverage.clover</q> filen. 
             Till sist så lyckades jag få den att fungera utan att köra <q>PHPUnit</q>.
         </p>
 
