Fix bugg with style

--- a/templates/proj/base.html.twig
+++ b/templates/proj/base.html.twig
@@ -4,6 +4,10 @@
     {{ encore_entry_link_tags('proj') }}
 {% endblock %}
 
+{% block importmap %}
+    {{ importmap('proj') }}
+{% endblock %}
+
 {% block siteTitle %}
     <span class="site-title">Project Black Jack</span>
 {% endblock %}
