Add report, Finished Kmom10

--- a/templates/proj/doc.html.twig
+++ b/templates/proj/doc.html.twig
@@ -4,4 +4,16 @@
 
 {% block main %}
 <h1>About Project Black Jack</h1>
+
+<p>
+    This is my end project for the course DV1608 V25 lp4 Objektorienterade webbteknologier.
+</p>
+
+<p>
+    I have created an implementation of a Blackjack card game using fake credits.
+</p>
+
+<p>
+    For more information about Blackjack read more about it here on this <a href="https://en.wikipedia.org/wiki/Black_Jack">wiki</a>.
+</p>
 {% endblock %}
